Storefront: blurb scrollbars in product listing css-fix

--- a/public_html/storefront/view/default/stylesheet/style.css
+++ b/public_html/storefront/view/default/stylesheet/style.css
@@ -895,7 +895,7 @@ ul.categorymenu > li ul > li img {
 
 .thumbnail .blurb {
 	max-height: 60px;
-	overflow: scroll;
+	overflow: auto;
 	text-overflow: ellipsis;
 }
 
